# nemotron-asr-voice-input

./: .gitignore  Cargo.toml  README.md  acceptance_report.md  analysis.md  build.rs  lessons.md  plan.md  spec.md  test.md  test_converter.rs  todos.md
${PROJECT_ROOT}/.opencode/: memory.db
.opencode/plans/: fix-missing-transcript-characters.md
.opencode/status-footer/: state.json
docs/: lessons.md  plan.md  spec.md  todos.md
docs/superpowers/plans/: 2026-06-22-nemotron-egui-gui.md
docs/superpowers/specs/: 2026-06-22-nemotron-egui-gui-design.md
src/: main.rs  wav.rs
src/asr/: config.rs  mod.rs  sherpa.rs
src/audio/: capture.rs  mod.rs  resampler.rs  ringbuf.rs
src/config/: settings.rs
src/convert/: mod.rs
src/download/: mod.rs
src/hotkey/: mod.rs  register.rs
src/injector/: clipboard.rs  mod.rs  sendinput.rs  uiautomation.rs
src/ui/: config_window.rs  mod.rs  strings.rs  tray.rs
src/ui/gui/: app.rs  state.rs
src/ui/overlay/: mod.rs  ui.rs
test_cc/: Cargo.toml
