[package]
name = "nemotron-voice-input"
version = "0.0.0"
edition = "2024"
description = "Nemotron ASR voice input - real-time speech recognition and text injection for Windows"

[dependencies]
# ASR engine with online streaming support
sherpa-onnx = "1.13"
sherpa-onnx-sys = "1.13"

# Audio capture
cpal = "0.18"

# Windows API (text injection + hotkey + system tray)
windows = { version = "0.62", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
] }

# GUI framework (egui)
eframe = { version = "0.31", features = ["wgpu"] }
egui-winit = "0.31"
egui-wgpu = "0.31"
winit = "0.30"
egui = "0.31"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Threading
crossbeam = "0.8"
once_cell = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# HTTP client for model downloads
ureq = { version = "2", features = ["tls"] }

# Tar + bzip2 for extracting model packages
tar = "0.4"
bzip2 = "0.5"

# Chinese text conversion (Simplified <-> Traditional)
ferrous-opencc = "0.4"
